--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:url" content="http://levitra734.us/">
     <meta property="og:site_name" content="Agen777">
     <meta property="og:author" content="Agen777">
-    <meta property="og:image" content="https://i.imgur.com/L4rzv4f.png">
+    <meta property="og:image" content="https://i.imgur.com/x0tDrh6.png">
     <meta name="og:locale" content="ID_id">
     <meta name="og:type" content="website">
     <meta name="rating" content="general">
@@ -1233,7 +1233,7 @@ Item added to your cart
             
               style="padding-bottom: 100.0%;"
             
-          ><img src="https://i.imgur.com/L4rzv4f.png?v=1703106593&amp;width=1500" alt="" srcset="https://i.imgur.com/L4rzv4f.png?v=1703106593&amp;width=165 165w, https://i.imgur.com/L4rzv4f.png?v=1703106593&amp;width=360 360w, https://i.imgur.com/L4rzv4f.png?v=1703106593&amp;width=535 535w, https://i.imgur.com/L4rzv4f.png?v=1703106593&amp;width=750 750w, https://i.imgur.com/L4rzv4f.png?v=1703106593&amp;width=1070 1070w, https://i.imgur.com/L4rzv4f.png?v=1703106593&amp;width=1500 1500w" width="1500" height="1500" sizes="(min-width: 1200px) 550px,
+          ><img src="https://i.imgur.com/x0tDrh6.png?v=1703106593&amp;width=1500" alt="" srcset="https://i.imgur.com/x0tDrh6.png?v=1703106593&amp;width=165 165w, https://i.imgur.com/x0tDrh6.png?v=1703106593&amp;width=360 360w, https://i.imgur.com/x0tDrh6.png?v=1703106593&amp;width=535 535w, https://i.imgur.com/x0tDrh6.png?v=1703106593&amp;width=750 750w, https://i.imgur.com/x0tDrh6.png?v=1703106593&amp;width=1070 1070w, https://i.imgur.com/x0tDrh6.png?v=1703106593&amp;width=1500 1500w" width="1500" height="1500" sizes="(min-width: 1200px) 550px,
               (min-width: 750px) calc((100vw - 130px) / 2), calc((100vw - 50px) / 2)" fetchpriority="high">
 </div>
         </div>
